--- a/package.json
+++ b/package.json
@@ -3,16 +3,21 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "nodemon -r dotenv/config ./bin/www"
   },
   "dependencies": {
     "body-parser": "~1.15.2",
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
+    "dotenv": "^4.0.0",
     "express": "~4.14.0",
+    "express-session": "^1.14.2",
     "hbs": "~4.0.1",
+    "jsonwebtoken": "^7.2.1",
     "less-middleware": "~2.2.0",
     "morgan": "~1.7.0",
+    "nodemon": "^1.11.0",
+    "request": "^2.79.0",
     "serve-favicon": "~2.3.0"
   }
 }
