--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
-REACH5_DOMAIN=
-REACH5_CLIENT_ID=
-REACH5_CLIENT_SECRET=
+REACH5_DOMAIN={DOMAIN}
+REACH5_CLIENT_ID={CLIENT_ID}
+REACH5_CLIENT_SECRET={CLIENT_SECRET}
