--- a/package.json
+++ b/package.json
@@ -6,18 +6,18 @@
     "start": "nodemon -r dotenv/config ./bin/www"
   },
   "dependencies": {
-    "body-parser": "~1.15.2",
-    "cookie-parser": "~1.4.3",
-    "debug": "~2.2.0",
+    "body-parser": "^1.15.2",
+    "cookie-parser": "^1.4.3",
+    "debug": "^2.2.0",
     "dotenv": "^4.0.0",
-    "express": "~4.14.0",
-    "express-session": "^1.14.2",
-    "hbs": "~4.0.1",
-    "jsonwebtoken": "^7.2.1",
-    "less-middleware": "~2.2.0",
-    "morgan": "~1.7.0",
-    "nodemon": "^1.11.0",
-    "request": "^2.79.0",
-    "serve-favicon": "~2.3.0"
+    "express": "^4.14.1",
+    "express-session": "^1.15.6",
+    "hbs": "^4.0.1",
+    "jsonwebtoken": "^7.4.3",
+    "less-middleware": "^2.2.1",
+    "morgan": "^1.7.0",
+    "nodemon": "^1.12.5",
+    "request": "^2.83.0",
+    "serve-favicon": "^2.3.2"
   }
 }
