--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "jsonwebtoken": "^7.4.3",
     "less-middleware": "^2.2.1",
     "morgan": "^1.7.0",
-    "nodemon": "^1.12.5",
+    "nodemon": "1.18.4",
     "request": "^2.83.0",
     "serve-favicon": "^2.3.2"
   }
