feat: add REACHFIVE_JWT param
REACHFIVE_JWT manage the algorithm used to sign the token HS256 or RS256

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
-REACH5_DOMAIN={DOMAIN}
-REACH5_CLIENT_ID={CLIENT_ID}
-REACH5_CLIENT_SECRET={CLIENT_SECRET}
+PORT=3000
+REACHFIVE_DOMAIN={DOMAIN}
+REACHFIVE_JWT={ALGO}
+REACHFIVE_CLIENT_ID={CLIENT_ID}
+REACHFIVE_CLIENT_SECRET={CLIENT_SECRET}
